--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Book - React APP</title>
+    <title>E-Book - React APP</title>
+    <link
+      rel="shortcut icon"
+      href="./src/assets/book.ico"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div id="root"></div>
